# blog-spark-4.1-declarative-pipelines

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
blog/: BLOG.md
src/check/: check.py
src/pipelines/batch/python/: spark-pipelines.yaml  transformations.py
src/pipelines/batch/sql/: spark-pipelines.yaml  transformations.sql
src/pipelines/stream/python/: spark-pipelines.yaml  transformations.py
src/pipelines/stream/sql/: spark-pipelines.yaml  transformations.py  transformations.sql
src/source/: data.py  generate_batch.py  generate_stream.py
